hphp/hack/test/typecheck/constraints/contravariance_constraint_bad.php.exp
File "contravariance_constraint_bad.php", line 30, characters 12-29:
Invalid return type (Typing[4323])
  File "contravariance_constraint_bad.php", line 22, characters 26-26:
  `T` is a constrained type parameter
  File "contravariance_constraint_bad.php", line 22, characters 31-37:
  This type constraint is violated
  File "contravariance_constraint_bad.php", line 22, characters 31-37:
  Expected `IHasFoo`
  File "contravariance_constraint_bad.php", line 29, characters 60-66:
  But got `IHasBar`
  File "contravariance_constraint_bad.php", line 29, characters 60-66:
  This type argument to `ICanCallFoo` only allows supertypes (it is contravariant)
